# backend/src/account/account.controller.ts
@@ -1,28 +1,26 @@
-import { Body, Controller, Get, Param, Post, Query } from '@nestjs/common';
+import { Body, Controller, Get, Param, Post } from '@nestjs/common';
 import { AccountService } from './account.service';
-import { ApiResponse } from '@nestjs/swagger';
-import { Account } from './account.dto';
 import {
   CreateAccountsDto,
   AccountResponseDto,
 } from './dto/create-accounts.dto';
+import { LinkUserDto } from './dto/link-user.dto';
+import { GetAccountResponseDto } from './dto/get-account.dto';
+import { ListAccountsResponseDto } from './dto/list-accounts.dto';
 
 @Controller('account')
 export class AccountController {
   constructor(private readonly accountService: AccountService) {}
 
   @Get()
-  @ApiResponse({
-    status: 200,
-    description: 'List of accounts',
-    type: [Account],
-  })
-  async listAccounts() {
+  async listAccounts(): Promise<ListAccountsResponseDto[]> {
     return this.accountService.listAccounts();
   }
 
   @Get(':accountId')
-  async getAccount(@Param('accountId') accountId: string) {
+  async getAccount(
+    @Param('accountId') accountId: string,
+  ): Promise<GetAccountResponseDto> {
     return this.accountService.getAccount(accountId);
   }
 
@@ -39,8 +37,8 @@ export class AccountController {
   @Post(':accountId/link-user')
   async linkUserToAccount(
     @Param('accountId') accountId: string,
-    @Body('userId') userId: string,
-  ) {
-    return this.accountService.linkUserToAccount(accountId, userId);
+    @Body() linkUserDto: LinkUserDto,
+  ): Promise<void> {
+    return this.accountService.linkUserToAccount(accountId, linkUserDto.userId);
   }
 }
