# backend/src/account/account.dto.ts
@@ -1,5 +1,0 @@
-export class Account {
-  id: string;
-  name: string;
-  iban: string;
-}
