# backend/src/account/dto/get-account.dto.ts
@@ -1,0 +1,25 @@
+import { IsString, IsNotEmpty, IsEmail, IsArray } from 'class-validator';
+
+export class AccountUserDto {
+  @IsString()
+  @IsNotEmpty()
+  id: string;
+
+  @IsString()
+  @IsNotEmpty()
+  @IsEmail()
+  email: string;
+}
+
+export class GetAccountResponseDto {
+  @IsString()
+  @IsNotEmpty()
+  iban: string;
+
+  @IsString()
+  @IsNotEmpty()
+  name: string;
+
+  @IsArray()
+  users: AccountUserDto[];
+}
