# backend/src/account/dto/link-user.dto.ts
@@ -1,0 +1,8 @@
+import { IsString, IsNotEmpty, IsUUID } from 'class-validator';
+
+export class LinkUserDto {
+  @IsString()
+  @IsNotEmpty()
+  @IsUUID()
+  userId: string;
+}
