# backend/src/user/dto/get-user.dto.ts
@@ -1,0 +1,25 @@
+import { IsString, IsNotEmpty, IsEmail, IsDate } from 'class-validator';
+
+export class GetUserQueryDto {
+  @IsString()
+  @IsNotEmpty()
+  @IsEmail()
+  email: string;
+}
+
+export class UserResponseDto {
+  @IsString()
+  @IsNotEmpty()
+  id: string;
+
+  @IsString()
+  @IsNotEmpty()
+  @IsEmail()
+  email: string;
+
+  @IsDate()
+  createdAt: Date;
+
+  @IsDate()
+  updatedAt: Date;
+}
